sandbox/output
StringCalculator.java:8: error: missing return statement
    }
    ^
1 error
